--- a/backend/static/homepage.css
+++ b/backend/static/homepage.css
@@ -14,8 +14,8 @@ body {
 
 .complete-container {
     display: flex;
-    width: 100%;
-    min-height: 100vh;
+    width: 100vw;
+    height: 96vh;
     justify-content: center;
     gap: 80px;
 }
@@ -24,8 +24,8 @@ body {
 .full-body-container {
     position: absolute;
     margin: 0;
-    width: 100%;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -342,8 +342,8 @@ input[type=text] {
 }
 
 .footer {
-    height: 40px;
-    width: 100%;
+    height: 5vh;
+    width: 100vw;
     background-color: #27374D;
     color: #DDE6ED;
     font-size: 18px;
